db2.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: project-plato
  name: db2
  labels:
    app: db2
spec:
  replicas: 1
  selector:
    matchLabels:
      app: db2
  template:
    metadata:
      labels:
        app: db2
    spec:
      containers:
        - image: nginx:1.16.1-alpine
          name: nginx
          ports:
            - containerPort: 80
      restartPolicy: Always
