db1-service.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: project-plato
  name: db1-service
spec:
  selector:
    app: db1
  ports:
    - protocol: TCP
      port: 6379
      targetPort: 6379
  type: ClusterIP
