db2-service.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: project-plato
  name: db2-service
spec:
  selector:
    app: db2
  ports:
    - protocol: TCP
      port: 5432
      targetPort: 5432
  type: ClusterIP
